--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/lifted-studios/hubot-github-event-announcer"
   },
   "keywords": [
+    "hubot",
     "hubot-script",
     "github",
     "webhooks",
@@ -29,7 +30,9 @@
     "grunt-contrib-coffee": "~0.7.0",
     "grunt": "~0.4.1",
     "grunt-shell": "~0.2.2",
-    "grunt-coffeelint": "0.0.6"
+    "grunt-coffeelint": "0.0.6",
+    "hubot": "^2.11.0",
+    "hubot-mock-adapter": "^1.0.0"
   },
   "main": "index.coffee",
   "scripts": {
