--- a/package.json
+++ b/package.json
@@ -24,18 +24,19 @@
     "coffee-script": "~1.8"
   },
   "devDependencies": {
-    "jasmine-focused": "1.x",
-    "grunt-release": "~0.6.0",
-    "matchdep": "~0.1.2",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt": "~0.4.1",
-    "grunt-shell": "~0.2.2",
+    "faker": "~2.1.2",
     "grunt-coffeelint": "0.0.6",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-release": "~0.6.0",
+    "grunt-shell": "~0.2.2",
+    "grunt": "~0.4.1",
+    "hubot-mock-adapter": "^1.0.0",
     "hubot": "^2.11.0",
-    "hubot-mock-adapter": "^1.0.0"
+    "jasmine-focused": "1.x",
+    "matchdep": "~0.1.2"
   },
   "main": "index.coffee",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt spec"
   }
 }
