--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "hubot-mock-adapter": "^1.0.0",
     "hubot": "^2.11.0",
     "jasmine-focused": "1.x",
-    "matchdep": "~0.1.2"
+    "matchdep": "~0.1.2",
+    "node-uuid": "~1.4.3"
   },
   "main": "index.coffee",
   "scripts": {
